--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -138,6 +138,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  // [2]
   -webkit-tap-highlight-color: transparent;       // [2]
   -webkit-touch-callout: none;                    // [3]
+  -webkit-user-select: none;
   body {
     height: inherit;  // [1]
     overflow: hidden;
