Added highlight CSS into basic links.

--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -51,6 +51,15 @@ a:active.downplayed {
 }
 
 /*
+Basic link.
+*/
+.link:active {
+  *, *:before, *:after {
+    color: @color-text-pressed;
+  }
+}
+
+/*
 Navigation link
 */
 
