--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -124,6 +124,9 @@ are `button` elements that have a logo as `label`.
     font-size: @size-btn-clear;
     content: @icon-x;
   }
+  &:active:after {
+    color: @color-text-pressed;
+  }
 }
 
 
