--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -34,6 +34,7 @@ Text colors
 @color-text-downplayed-light: #d3d3d3;
 @color-text-inverse: #FFFFFF;
 @color-icon-deactivated: #707070;
+@color-icon-deactivated-pressed: darken(@color-icon-deactivated, 10%);
 @color-text-disabled: #b0b0b6;
 
 /*
