Align show completed tasks button with heading.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -117,8 +117,10 @@ Icon classes
 .icon-toggle-completed {
   font-size: @size-icon-toggle-completed;
   line-height: @size-icon-toggle-completed;
+  height: @size-icon-toggle-completed;
   &:after {
     .set-icon-font;
+    vertical-align: baseline;
     color: @color-text-downplayed;
     content: @icon-show-completed;
   }
