--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -733,6 +733,11 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   vertical-align: middle;       // [2]
 }
 
+// 1. Align show completed tasks button with heading.
+.group-mixed.heading > .group-mixed--right > button {
+  margin-top: @margin-top-heading-justified / 2 - 1px;  // [1]
+}
+
 // FIXME: rename move (overrides.less)
 @padding-vertically-centered: 11px;
 @group-mixed--left-vertical-padding: 8px;
