Made CSS selector introduced in cd1f371bfdc6d5a81fa173e5d8ca9f45d692f9f7 more specific.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -734,7 +734,8 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 }
 
 // 1. Align show completed tasks button with heading.
-.group-mixed.heading > .group-mixed--right > button {
+//    Font-size and line-height is different than heading so adjust position correctly.
+.group-mixed.heading > .group-mixed--right[task-list-completed] > button {
   margin-top: @margin-top-heading-justified / 2 - 1px;  // [1]
 }
 
