Make hardware accelerated scrolling in WebKit browsers working in initial slide when setting it on feature change.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1117,7 +1117,7 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
 //      -webkit-overflow-scrolling must be set to 'auto' in slide which has been positioned with translate3d
 //      under element to get -webkit-overflow-scrolling working in element.
 //
-//    NOTE: This bug is fixed starging from iOS 8.
+//    NOTE: This bug is fixed in VKWebView starting from iOS 8. At the moment, Cordova still uses UIWebView.
 .swiper-slide-under-element .container-content {
   -webkit-overflow-scrolling: auto; // [1]
 }
