Make menu elements invisible instead of removing them from the DOM during tutorial.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1128,6 +1128,10 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   box-sizing: content-box;  // [1]
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 
 // FIXME: lost&found - not in use
 // 1. Override vertical-align: middle because it will brake layout with multiline text. Set padding-top and
