--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -19,9 +19,14 @@ TODO: em grid structure explained in plain English (when new grid structure deci
 # LEVEL 1: Root
 */
 
+.container-root {
+  width: 100%;
+  height: 100%;
+}
+
 // 1. Set width and height for absolutely positioned (grand)children.
 // 2. Must set position to relative for correct width during transitions. Otherwise page would scroll horizontally.
-.container-root {
+.container-root--inner {
   height: 100%; // [1]
   width: 100%;  // [1]
   position: relative; // [2]
