--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -376,9 +376,52 @@ TODO: working example needed!
 ```
 */
 
+// 1. Center vertically. See http://css-tricks.com/centering-css-complete-guide/#vertical-block-known
+.container-modal {
+  position: absolute;                   // [1]
+  top: 50%;                             // [1]
+  -webkit-transform: translateY(-50%);  // [1]
+  -moz-transform: translateY(-50%);     // [1]
+  -ms-transform: translateY(-50%);      // [1]
+  -o-transform: translateY(-50%);       // [1]
+  transform: translateY(-50%);          // [1]
+  width: 100%;
+  max-width: 400px;
+  .center-horizontally-absolute();
+  background: white;
+}
+
+// 1. Blur backdrop. See http://tympanus.net/codrops/2011/12/14/item-blur-effect-with-css3-and-jquery/
 .editable-field-backdrop.active {
   * {
     pointer-events: none;
+  }
+  .blur {
+    -webkit-transition-property: opacity, text-shadow, color;
+    -webkit-transition-duration: 70ms, 70ms, 70ms;
+    -webkit-transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
+
+    transition-property: opacity, text-shadow, color;
+    transition-duration: 70ms, 70ms, 70ms;
+    transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
+
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+    color: rgba(0, 0, 0, 0) !important;
+    opacity: 0.5;
+    span,
+    span:after,
+    textarea {
+      -webkit-transition-property: opacity, text-shadow, color;
+      -webkit-transition-duration: 70ms, 70ms, 70ms;
+      -webkit-transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
+
+      transition-property: opacity, text-shadow, color;
+      transition-duration: 70ms, 70ms, 70ms;
+      transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
+
+      text-shadow: 0px 0px 10px rgba(51, 51, 51, 0.9);
+      color: rgba(51, 51, 51, 0) !important;
+    }
   }
 }
 
