--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -382,46 +382,20 @@ TODO: working example needed!
   top: 50%;                             // [1]
   -webkit-transform: translateY(-50%);  // [1]
   -moz-transform: translateY(-50%);     // [1]
-  -ms-transform: translateY(-50%);      // [1]
   -o-transform: translateY(-50%);       // [1]
+  -ms-transform: translateY(-50%);      // [1]
   transform: translateY(-50%);          // [1]
   width: 100%;
   max-width: 400px;
   .center-horizontally-absolute();
   background: white;
+  box-shadow: 0 1px 2px @color-text-downplayed-light, 0 -1px 2px @color-text-downplayed-light;
 }
 
 // 1. Blur backdrop. See http://tympanus.net/codrops/2011/12/14/item-blur-effect-with-css3-and-jquery/
 .editable-field-backdrop.active {
   * {
     pointer-events: none;
-  }
-  .blur {
-    -webkit-transition-property: opacity, text-shadow, color;
-    -webkit-transition-duration: 70ms, 70ms, 70ms;
-    -webkit-transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
-
-    transition-property: opacity, text-shadow, color;
-    transition-duration: 70ms, 70ms, 70ms;
-    transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
-
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
-    color: rgba(0, 0, 0, 0) !important;
-    opacity: 0.5;
-    span,
-    span:after,
-    textarea {
-      -webkit-transition-property: opacity, text-shadow, color;
-      -webkit-transition-duration: 70ms, 70ms, 70ms;
-      -webkit-transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
-
-      transition-property: opacity, text-shadow, color;
-      transition-duration: 70ms, 70ms, 70ms;
-      transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940), cubic-bezier(0.250, 0.460, 0.450, 0.940);
-
-      text-shadow: 0px 0px 10px rgba(51, 51, 51, 0.9);
-      color: rgba(51, 51, 51, 0) !important;
-    }
   }
 }
 
@@ -703,231 +677,4 @@ TODO: Example needed
 // 1. Highlight hovered date with bold font.
 .web .pika-button:hover {
   .set-font-bold; // [1]
-}
-
-
-// #############################
-// from Bootstrap variables.less
-
-@zindex-modal-background: 1040;
-@zindex-modal: 1050;
-//** Padding applied to the modal body
-@modal-inner-padding: 15px;
-//** Padding applied to the modal title
-@modal-title-padding: 15px;
-//** Modal title line-height
-@modal-title-line-height: @grid-vertical-half;
-//** Background color of modal content area
-@modal-content-bg: #fff;
-//** Modal content border color
-@modal-content-border-color: rgba(0,0,0,.2);
-//** Modal content border color **for IE8**
-@modal-content-fallback-border-color: #999;
-//** Modal backdrop background color
-@modal-backdrop-bg: #000;
-//** Modal backdrop opacity
-@modal-backdrop-opacity: .5;
-//** Modal header border color
-@modal-header-border-color: #e5e5e5;
-//** Modal footer border color
-@modal-footer-border-color: @modal-header-border-color;
-@modal-lg: 900px;
-@modal-md: 600px;
-@modal-sm: 300px;
-
-// Small screen / tablet
-// Note: Deprecated @screen-sm and @screen-tablet as of v3.0.1
-@screen-sm: 768px;
-@screen-sm-min: @screen-sm;
-@screen-tablet: @screen-sm-min;
-
-// Medium screen / desktop
-// Note: Deprecated @screen-md and @screen-desktop as of v3.0.1
-@screen-md: 992px;
-@screen-md-min: @screen-md;
-@screen-desktop: @screen-md-min;
-
-// Large screen / wide desktop
-// Note: Deprecated @screen-lg and @screen-lg-desktop as of v3.0.1
-@screen-lg: 1200px;
-@screen-lg-min: @screen-lg;
-@screen-lg-desktop: @screen-lg-min;
-
-
-// #################
-// from Bootstrap mixins.less
-.translate(@x; @y) {
-  -webkit-transform: translate(@x, @y);
-      -ms-transform: translate(@x, @y); // IE9 only
-      transform: translate(@x, @y);
-    }
-    .transition-transform(@transition) {
-      -webkit-transition: -webkit-transform @transition;
-      -moz-transition: -moz-transform @transition;
-      -o-transition: -o-transform @transition;
-      transition: transform @transition;
-    }
-
-
-/*
-*************************************************************
-# Drop shadows
-TODO: Do we need an example?
-*/
-
-//
-// Note: Deprecated `.box-shadow()` as of v3.1.0 since all of Bootstrap's
-//   supported browsers that have box shadow capabilities now support the
-//   standard `box-shadow` property.
-.box-shadow(@shadow) {
-  -webkit-box-shadow: @shadow; // iOS <4.3 & Android <4.1
-  box-shadow: @shadow;
-}
-
-// Opacity
-.opacity(@opacity) {
-  opacity: @opacity;
-  // IE8 filter
-  @opacity-ie: (@opacity * 100);
-  filter: ~"alpha(opacity=@{opacity-ie})";
-}
-
-
-/*
-*************************************************************
-# Modals
-TODO: Gets wiped?
-*/
-
-// .modal-open      - body class for killing the scroll
-// .modal           - container to scroll within
-// .modal-dialog    - positioning shell for the actual modal
-// .modal-content   - actual modal w/ bg and corners and shit
-
-// Kill the scroll on the body
-.modal-open {
-  overflow: hidden;
-}
-
-// Container that the modal scrolls within
-.modal {
-  display: none;
-  overflow: auto;
-  overflow-y: scroll;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: @zindex-modal;
-  -webkit-overflow-scrolling: touch;
-
-  // Prevent Chrome on Windows from adding a focus outline. For details, see
-  // https://github.com/twbs/bootstrap/pull/10951.
-  outline: 0;
-
-  // When fading in the modal, animate it to slide down
-  &.fade .modal-dialog {
-    .translate(0, -25%);
-    .transition-transform(~"0.3s ease-out");
-  }
-  &.in .modal-dialog { .translate(0, 0)}
-}
-
-// Shell div to position the modal with bottom padding
-.modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 10px;
-}
-
-// Actual modal
-.modal-content {
-  position: relative;
-  background-color: @modal-content-bg;
-  border: 1px solid @modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
-  border: 1px solid @modal-content-border-color;
-  .box-shadow(0 3px 9px rgba(0, 0, 0, .5));
-  background-clip: padding-box;
-  // Remove focus outline from opened modal
-  outline: none;
-}
-
-// Modal background
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: @zindex-modal-background;
-  background-color: @modal-backdrop-bg;
-  // Fade for backdrop
-  &.fade { .opacity(0); }
-  &.in { .opacity(@modal-backdrop-opacity); }
-}
-
-// Modal header
-// Top section of the modal w/ title and dismiss
-.modal-header {
-  padding: @modal-title-padding;
-  border-bottom: 1px solid @modal-header-border-color;
-  min-height: (@modal-title-padding + @modal-title-line-height);
-}
-// Close icon
-.modal-header .close {
-  margin-top: -2px;
-}
-
-// Title text within header
-.modal-title {
-  margin: 0;
-  line-height: @modal-title-line-height;
-}
-
-// Modal body
-// Where all modal content resides (sibling of .modal-header and .modal-footer)
-.modal-body {
-  position: relative;
-  padding: @modal-inner-padding;
-}
-
-// Footer (for actions)
-.modal-footer {
-  padding: @modal-inner-padding;
-  text-align: right; // right align buttons
-  &:extend(.clearfix all); // clear it in case folks use .pull-* classes on buttons
-
-  // Properly space out buttons
-  .btn + .btn {
-    margin-left: 5px;
-    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
-  }
-  // but override that for button groups
-  .btn-group .btn + .btn {
-    margin-left: -1px;
-  }
-  // and override it for block buttons as well
-  .btn-block + .btn-block {
-    margin-left: 0;
-  }
-}
-
-// Scale up the modal
-@media (min-width: @screen-sm-min) {
-  // Automatically set modal's width for larger viewports
-  .modal-dialog {
-    width: @modal-md;
-    margin: 30px auto;
-  }
-  .modal-content {
-    .box-shadow(0 5px 15px rgba(0, 0, 0, .5));
-  }
-
-  // Modal sizes
-  .modal-sm { width: @modal-sm; }
-}
-
-@media (min-width: @screen-md-min) {
-  .modal-lg { width: @modal-lg; }
 }
