Added information about modified items to offline account page for better debugging

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1074,6 +1074,14 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   }
 }
 
+// FIXME: Comments
+.group-details {
+  .row {
+    line-height: @grid-vertical-small;
+  }
+  padding-bottom: @grid-vertical-half;
+}
+
 // FIXME: comments
 .group-html-external {
   h1 {
