Improved headings to be more self evident. Better layout for small width devices.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -119,6 +119,10 @@ h2 {
   color: @color-text-active;
 }
 
+.text-heading.long {
+  font-size: @size-font-not-so-large;
+}
+
 .text-btn {
   .set-font-bold();
 }
