--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -104,6 +104,7 @@ Menu link
 /*
 In Android, :active pseudo class just sucks, gets ghost clicks when menu is opening.
 .menu-hidden selector tricks did not help either.
+JP: Maybe pointer-events: none might help
 */
 .android .link-menu:active {
   * {
