Incomplete modal work.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -189,6 +189,10 @@ Navigation texts
   display:inherit;
 }
 
+.text-navigation {
+  .dont-break-words();
+}
+
 @width-arrow-text-gap: 5px;
 .text-navigation-back:not(.not-swipeable):before {
   .set-icon-font;
